--- a/dev/import/styles/reset.scss
+++ b/dev/import/styles/reset.scss
@@ -1,11 +1,28 @@
 /* Adapted from :
+- yolan.design custom
 - The new CSS reset - 2024.08.25
 - Normalize.css - 2018.11.5
 - Josh Comeau - 2024.11.25
 */
 
+
+
+/* - YOLAN.DESIGN - */
+
+/* 1rem = 10px */
 html {
     font-size: 10px;
+}
+body {
+    font-size: 1.6rem; /* default text size is 16px */
+    line-height: 1.2;
+    letter-spacing: 0%;
+    word-spacing: 0%;
+}
+
+/* Mobile : removed default blue highlight on tap (make sure to add some :hover or :active to your elements at least)
+   Default scroll-to is animated (but only if preferred) */
+html {
     -webkit-tap-highlight-color: transparent;
     scroll-behavior: smooth;
 }
@@ -15,16 +32,21 @@ html {
     }
 }
 
+/* Body min/max sizes */
 body {
-    font-size: 1.6rem;
-    line-height: 1.15;
     max-width: 100vw;
     min-height: 100vh;
 }
 
-[hidden] {
+/* Utilites */
+*[hidden] {
     visibility: hidden;
     display: none;
+}
+*[hidden-user] {
+    pointer-events: none;
+    user-select: none;
+    opacity: 0;
 }
 
 wrapper {
@@ -34,11 +56,18 @@ wrapper {
     height: auto;
 }
 
+/* Hierarchy */
+main > * {
+    z-index: 0;
+    position: relative;
+}
+
 *::before,
 *::after {
     z-index: 1;
 }
 
+/* Medias defaults */
 img,
 picture,
 video {
@@ -53,6 +82,7 @@ svg {
     width: 100%;
     max-width: 100%;
     height: auto;
+    user-select: none;
 }
 .video-container video,
 .img-container img {
@@ -62,8 +92,14 @@ svg {
 
 svg {
     overflow: visible;
+    isolation: isolate;
+    fill: none;
+    stroke: none;
+    stroke-width: 1;
+    stroke-miterlimit: 10;
 }
 
+/* Fixes for interactive elements */
 a,
 button {
     cursor: pointer;
@@ -81,6 +117,7 @@ select {
     word-spacing: inherit;
 }
 
+/* Default display */
 div,
 article,
 aside,
